Committing fixed nav w/ opacity stretch goal. Used LESS function for opacity, was pretty rad

--- a/css/index.css
+++ b/css/index.css
@@ -147,7 +147,7 @@ h5 {
 }
 h1 {
   font-size: 4rem;
-  padding: 2% 0;
+  padding: 1.2rem;
 }
 h2 {
   font-size: 3.2rem;
@@ -165,19 +165,23 @@ p {
   margin: 0 auto;
 }
 .mainHeader {
+  overflow: hidden;
+  position: fixed;
+  top: 0;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
   width: 100%;
-  padding: 1% 0;
-  background-color: #f6f6f6;
+  height: 10vh;
+  padding: 2% 0;
+  background-color: rgba(246, 246, 246, 0.8);
 }
 .mainHeader a:link,
 .mainHeader a:visited {
   line-height: 1.4;
   font-size: 1.6rem;
-  padding: 0 1rem;
+  padding: 1.2rem;
   color: #454a59;
   text-decoration: none;
 }
@@ -190,6 +194,9 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home .intro {
+  margin-top: 10vh;
 }
 .home .intro h2 {
   padding: 15px;
