--- a/less/global.less
+++ b/less/global.less
@@ -24,7 +24,7 @@ h5 {
 
 h1 {
   font-size: 4rem;
-  padding: 2% 0;
+  padding: 1.2rem;
 }
 
 h2 {
