--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,6 +2,8 @@
 
 .home {
   .intro {
+    margin-top: @headerHeight;
+    
     h2 {
       padding: 15px;
     }
